--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
-    <%#= javascript_pack_tag 'hello_vue' %>
+    <%= javascript_pack_tag 'hello_vue' %>
+    <%= javascript_pack_tag 'client' %>
+    <%= javascript_pack_tag 'staff' %>
   </head>
 
   <body>
