--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= javascript_pack_tag 'application' %>
-    <%#= javascript_pack_tag 'hello_vue' %>
+    <%#= javascript_pack_tag 'application' %>
+    <%= javascript_pack_tag 'hello_vue' %>
   </head>
 
   <body>
@@ -18,14 +18,15 @@
 
     <% if client_signed_in? %>
       <li> Dear <%= current_client %> </li>
-      <li> <%= link_to 'Sign Out Client!', destroy_client_session_path, method: :delete %> </li>
+      <li> <%= button_to 'Sign Out Client!', destroy_client_session_path, method: :delete %> </li>
+
     <% else %>
       <li> <%= link_to 'Sign In Client!', new_client_session_path %> </li>
     <% end %>
 
     <% if staff_signed_in? %>
       <li> Dear <%= current_staff %> </li>
-      <li> <%= link_to 'Sign Out Staff!', destroy_staff_session_path, method: :delete %> </li>
+      <li> <%= button_to 'Sign Out Staff!', destroy_staff_session_path, method: :delete %> </li>
     <% else %>
       <li> <%= link_to 'Sign In Staff!', new_staff_session_path %> </li>
     <% end %>
