--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,13 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%#= javascript_pack_tag 'application' %>
-    <%= javascript_pack_tag 'hello_vue' %>
+    <%= javascript_pack_tag 'application' %>
+    <%#= javascript_pack_tag 'hello_vue' %>
   </head>
+
+  <header>
+    <%= render 'layouts/navbar_staff'%>
+  </header>
 
   <body>
 
@@ -18,7 +22,7 @@
 
     <% if client_signed_in? %>
       <li> Dear <%= current_client %> </li>
-      <li> <%= button_to 'Sign Out Client!', destroy_client_session_path, method: :delete %> </li>
+      <li> <%= link_to 'Sign Out Client!', destroy_client_session_path, method: :get %> </li>
 
     <% else %>
       <li> <%= link_to 'Sign In Client!', new_client_session_path %> </li>
@@ -26,11 +30,13 @@
 
     <% if staff_signed_in? %>
       <li> Dear <%= current_staff %> </li>
-      <li> <%= button_to 'Sign Out Staff!', destroy_staff_session_path, method: :delete %> </li>
+      <li> <%= link_to 'Sign Out Staff!', destroy_staff_session_path, method: :get %> </li>
     <% else %>
       <li> <%= link_to 'Sign In Staff!', new_staff_session_path %> </li>
     <% end %>
 
-    <%= yield %>
+    <div id="app">
+      <%= yield %>
+    </div>
   </body>
 </html>
