--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,37 +6,48 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= javascript_pack_tag 'application' %>
-    <%#= javascript_pack_tag 'hello_vue' %>
+    <%#= stylesheet_link_tag 'application', media: 'all' %>
+    <%#= javascript_pack_tag 'application' %>
+
+
   </head>
 
   <header>
-    <%= render 'layouts/navbar_staff'%>
+    <%#= render 'layouts/navbar_staff'%>
   </header>
 
   <body>
 
     <p class="notice"><%= notice %></p>
+
     <p class="alert"><%= alert %></p>
 
-    <% if client_signed_in? %>
-      <li> Dear <%= current_client %> </li>
-      <li> <%= link_to 'Sign Out Client!', destroy_client_session_path, method: :get %> </li>
 
-    <% else %>
-      <li> <%= link_to 'Sign In Client!', new_client_session_path %> </li>
-    <% end %>
 
-    <% if staff_signed_in? %>
-      <li> Dear <%= current_staff %> </li>
-      <li> <%= link_to 'Sign Out Staff!', destroy_staff_session_path, method: :get %> </li>
-    <% else %>
-      <li> <%= link_to 'Sign In Staff!', new_staff_session_path %> </li>
-    <% end %>
+    <%# if client_signed_in? %>
+<!--      <li> Dear <%#= current_client %> </li>-->
+<!--      <li> <%#= link_to 'Sign Out Client!', destroy_client_session_path, method: :get %> </li>-->
+
+    <%# else %>
+<!--      <li> <%#= link_to 'Sign In Client!', new_client_session_path %> </li>-->
+    <%# end %>
+
+    <%# if staff_signed_in? %>
+<!--      <li> Dear <%#= current_staff %> </li>-->
+<!--      <li> <%#= link_to 'Sign Out Staff!', destroy_staff_session_path, method: :get %> </li>-->
+    <%# else %>
+<!--      <li> <%#= link_to 'Sign In Staff!', new_staff_session_path %> </li>-->
+    <%# end %>
 
     <div id="app">
       <%= yield %>
     </div>
+    <%#= javascript_pack_tag 'hello_vue' %>
   </body>
+
+  <% if current_staff.present? %>
+  <%= javascript_pack_tag 'staff' %>
+  <% elsif current_client.present? %>
+  <%= javascript_pack_tag 'client' %>
+  <% end %>
 </html>
