--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
     <div id="app">
       <%= yield %>
     </div>
-    <%#= javascript_pack_tag 'hello_vue' %>
+    <%= javascript_pack_tag 'hello_vue' %>
   </body>
 
   <% if current_staff.present? %>
