--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,14 +39,16 @@
     <%# end %>
 
     <div id="app">
-      <%= yield %>
+      <%#= yield %>
     </div>
     <%#= javascript_pack_tag 'hello_vue' %>
   </body>
 
-  <% if current_staff.present? %>
-  <%= javascript_pack_tag 'staff' %>
-  <% elsif current_client.present? %>
-  <%= javascript_pack_tag 'client' %>
-  <% end %>
+  <%# if current_staff.present? %>
+  <%#= javascript_pack_tag 'staff' %>
+  <%# elsif current_client.present? %>
+  <%#= javascript_pack_tag 'client' %>
+  <%# end %>
+
+  <%= javascript_pack_tag 'common' %>
 </html>
